--- a/startpage.html
+++ b/startpage.html
@@ -101,7 +101,7 @@
     <form method="dialog">
       <h3 style="margin:0 0 8px 0">Golemio API klíč</h3>
       <p class="muted" style="margin:0 0 10px 0">Vlož svůj <em>X-Access-Token</em> (uloží se jen v tomto prohlížeči).</p>
-      <input type="text" id="apiInput" autocomplete="off" placeholder="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9…" />
+      <input type="text" id="apiInput" autocomplete="off" placeholder="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6NDA4NSwiaWF0IjoxNzYxNTg5NjAzLCJleHAiOjExNzYxNTg5NjAzLCJpc3MiOiJnb2xlbWlvIiwianRpIjoiZmJjNzNiMjYtYjg5Mi00MzA3LWJhZTItMGUwMWJhOTRjYjYyIn0.2qkhf1N1Xd5JI_FDdTyEJsZXUHvE1mFBNx2X2PE8-Rw" />
       <div style="display:flex;gap:8px;justify-content:flex-end;margin-top:12px">
         <button class="btn" value="cancel">Zrušit</button>
         <button class="btn" value="ok">Uložit</button>
